--- a/package.json
+++ b/package.json
@@ -51,13 +51,18 @@
     "typescript": "~5.8"
   },
   "dependencies": {
+    "@adonisjs/ally": "^5.1.0",
     "@adonisjs/auth": "^9.4.0",
     "@adonisjs/core": "^6.18.0",
     "@adonisjs/cors": "^2.2.1",
+    "@adonisjs/drive": "^3.4.1",
+    "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/mail": "^9.2.2",
     "@vinejs/vine": "^3.0.1",
     "adonis-captcha-guard": "^1.0.1",
     "axios": "^1.11.0",
+    "edge.js": "^6.3.0",
     "google-auth-library": "^10.2.0",
     "luxon": "^3.7.1",
     "midtrans-client": "^1.4.3",
