--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,39 @@
+# Timezone (default UTC, boleh diganti)
 TZ=UTC
+
+# App & Server Settings
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=
+APP_TITLE=Abby-n-Bev E-commerce
+APP_URL=http://localhost:3333
+APP_CLIENT=http://localhost:3333
+APP_KEY=your_app_key
 NODE_ENV=development
-DB_HOST=127.0.0.1
+
+# Database Settings
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
-SMTP_HOST=
-SMTP_PORT=
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_DATABASE=your_db_name
+
+# Mailer / SMTP Settings
+SMTP_HOST=your_smtp_host
+SMTP_PORT=your_smtp_port
+SMTP_USERNAME=your_smtp_username
+SMTP_PASSWORD=your_smtp_password
+DEFAULT_FROM_EMAIL=your_email@example.com
+
+# File Storage Settings
 DRIVE_DISK=fs
+
+# AWS S3 Settings (optional, kalo pakai cloud storage)
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_REGION=your_aws_region
+S3_BUCKET=your_bucket_name
+
+# Google OAuth Settings (optional, kalo pakai Google login)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
