--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
     "ts-node-maintained": "^10.9.5",
     "typescript": "~5.8"
   },
