--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 TZ=UTC
 
 # App & Server Settings
-PORT=3333
+PORT=3333 # sesuaikan port nya
 HOST=localhost
 LOG_LEVEL=info
 APP_TITLE=Abby-n-Bev E-commerce
@@ -13,27 +13,48 @@ NODE_ENV=development
 
 # Database Settings
 DB_HOST=localhost
-DB_PORT=3306
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_DATABASE=your_db_name
+DB_PORT=db_port # sesuaikan DB port nya
+DB_USER=db_user
+DB_PASSWORD= # kosongkan
+DB_DATABASE=abbynbev # ini untuk nama database sekarang
 
-# Mailer / SMTP Settings
-SMTP_HOST=your_smtp_host
-SMTP_PORT=your_smtp_port
-SMTP_USERNAME=your_smtp_username
-SMTP_PASSWORD=your_smtp_password
-DEFAULT_FROM_EMAIL=your_email@example.com
+# Mailer / SMTP Settings 
+SMTP_HOST=smtp_host
+SMTP_PORT=smtp_port
+SMTP_USERNAME=smtp_username
+SMTP_PASSWORD=smtp_password
+DEFAULT_FROM_EMAIL=email@example.com
 
 # File Storage Settings
 DRIVE_DISK=fs
 
 # AWS S3 Settings (optional, kalo pakai cloud storage)
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
-AWS_REGION=your_aws_region
-S3_BUCKET=your_bucket_name
+AWS_ACCESS_KEY_ID=aws_access_key
+AWS_SECRET_ACCESS_KEY=aws_secret_key
+AWS_REGION=aws_region
+S3_BUCKET=bucket_name
 
 # Google OAuth Settings (optional, kalo pakai Google login)
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secret
+
+# Komerce Raja Ongkir API Settings
+KOMERCE_COST_API_KEY=komerce_cost_api
+KOMERCE_COST_BASE_URL=komerce_cost_base_url
+KOMERCE_DELIVERY_API_KEY=komerce_delivery_api
+KOMERCE_DELIVERY_BASE_URL=komerce_delivery_base_url
+# KOMERCE_DELIVERY_BASE_URL=https://api.collaborator.komerce.id/
+
+# Komerce Origin settings, sesuaikan dengan lokasi toko
+KOMERCE_ORIGIN=423
+KOMERCE_ORIGIN_TYPE=district
+
+# Midtrans Payment Gateway Settings
+MIDTRANS_SERVER_KEY=midtrans_server_key
+MIDTRANS_CLIENT_KEY=midtrans_client_key
+MIDTRANS_ENV=sandbox # pilihan: sandbox / production
+
+# WhatsApp API Settings
+WHATSAPP_PHONE_NUMBER_ID=687953551079287 # ganti dengan nomor whatsapp business abby n bev
+WHATSAPP_ACCESS_TOKEN=access_token_whatsapp_business
+WHATSAPP_API_URL=https://graph.facebook.com/v17.0 # jangan diubah
