--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.6.1",
     "@adonisjs/mail": "^9.2.2",
+    "@react-pdf/renderer": "^4.3.1",
     "@types/lodash": "^4.17.20",
     "@vinejs/vine": "^3.0.1",
     "adonis-captcha-guard": "^1.0.1",
@@ -67,6 +68,7 @@
     "edge.js": "^6.3.0",
     "exceljs": "^4.4.0",
     "google-auth-library": "^10.2.1",
+    "jsbarcode": "^3.12.1",
     "luxon": "^3.7.1",
     "midtrans-client": "^1.4.3",
     "moment": "^2.30.1",
