--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "luxon": "^3.7.1",
     "midtrans-client": "^1.4.3",
     "moment": "^2.30.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "openai": "^5.11.0",
     "reflect-metadata": "^0.2.2"
