--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.6.1",
     "@adonisjs/mail": "^9.2.2",
+    "@material/web": "^2.4.1",
     "@react-pdf/renderer": "^4.3.1",
+    "@rollup/plugin-node-resolve": "^16.0.3",
     "@types/lodash": "^4.17.20",
     "@vinejs/vine": "^3.0.1",
     "adonis-captcha-guard": "^1.0.1",
@@ -74,7 +76,8 @@
     "moment": "^2.30.1",
     "mysql2": "^3.14.3",
     "openai": "^5.11.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "rollup": "^4.54.0"
   },
   "hotHook": {
     "boundaries": [
