--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "@types/lodash": "^4.17.20",
     "@vinejs/vine": "^3.0.1",
     "adonis-captcha-guard": "^1.0.1",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
     "edge.js": "^6.3.0",
     "exceljs": "^4.4.0",
     "google-auth-library": "^10.2.1",
@@ -74,6 +75,7 @@
     "luxon": "^3.7.1",
     "midtrans-client": "^1.4.3",
     "moment": "^2.30.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "openai": "^5.11.0",
     "reflect-metadata": "^0.2.2",
