--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^22.15.18",
     "eslint": "^9.26.0",
     "hot-hook": "^0.4.0",
+    "nodemon": "^3.1.11",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
