--- a/package.json
+++ b/package.json
@@ -14,22 +14,70 @@
     "typecheck": "tsc --noEmit"
   },
   "imports": {
-    "#controllers/*": "./app/controllers/*.js",
-    "#exceptions/*": "./app/exceptions/*.js",
-    "#models/*": "./app/models/*.js",
-    "#mails/*": "./app/mails/*.js",
-    "#services/*": "./app/services/*.js",
-    "#listeners/*": "./app/listeners/*.js",
-    "#events/*": "./app/events/*.js",
-    "#middleware/*": "./app/middleware/*.js",
-    "#validators/*": "./app/validators/*.js",
-    "#providers/*": "./providers/*.js",
-    "#policies/*": "./app/policies/*.js",
-    "#abilities/*": "./app/abilities/*.js",
-    "#database/*": "./database/*.js",
-    "#start/*": "./start/*.js",
-    "#tests/*": "./tests/*.js",
-    "#config/*": "./config/*.js"
+    "#controllers/*": {
+      "types": "./app/controllers/*.ts",
+      "default": "./app/controllers/*.js"
+    },
+    "#exceptions/*": {
+      "types": "./app/exceptions/*.ts",
+      "default": "./app/exceptions/*.js"
+    },
+    "#models/*": {
+      "types": "./app/models/*.ts",
+      "default": "./app/models/*.js"
+    },
+    "#mails/*": {
+      "types": "./app/mails/*.ts",
+      "default": "./app/mails/*.js"
+    },
+    "#services/*": {
+      "types": "./app/services/*.ts",
+      "default": "./app/services/*.js"
+    },
+    "#listeners/*": {
+      "types": "./app/listeners/*.ts",
+      "default": "./app/listeners/*.js"
+    },
+    "#events/*": {
+      "types": "./app/events/*.ts",
+      "default": "./app/events/*.js"
+    },
+    "#middleware/*": {
+      "types": "./app/middleware/*.ts",
+      "default": "./app/middleware/*.js"
+    },
+    "#validators/*": {
+      "types": "./app/validators/*.ts",
+      "default": "./app/validators/*.js"
+    },
+    "#providers/*": {
+      "types": "./providers/*.ts",
+      "default": "./providers/*.js"
+    },
+    "#policies/*": {
+      "types": "./app/policies/*.ts",
+      "default": "./app/policies/*.js"
+    },
+    "#abilities/*": {
+      "types": "./app/abilities/*.ts",
+      "default": "./app/abilities/*.js"
+    },
+    "#database/*": {
+      "types": "./database/*.ts",
+      "default": "./database/*.js"
+    },
+    "#start/*": {
+      "types": "./start/*.ts",
+      "default": "./start/*.js"
+    },
+    "#tests/*": {
+      "types": "./tests/*.ts",
+      "default": "./tests/*.js"
+    },
+    "#config/*": {
+      "types": "./config/*.ts",
+      "default": "./config/*.js"
+    }
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
