update product csv import and table ui

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "adonis-captcha-guard": "^1.0.1",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
+    "csv-parser": "^3.2.0",
     "edge.js": "^6.3.0",
     "exceljs": "^4.4.0",
     "google-auth-library": "^10.2.1",
