--- a/.env.example
+++ b/.env.example
@@ -35,8 +35,8 @@ AWS_REGION=aws_region
 S3_BUCKET=bucket_name
 
 # Google OAuth Settings (optional, kalo pakai Google login)
-GOOGLE_CLIENT_ID=google_client_id
-GOOGLE_CLIENT_SECRET=google_client_secret
+GOOGLE_CLIENT_ID=client_id
+GOOGLE_CLIENT_SECRET=secret_client
 
 # Komerce Raja Ongkir API Settings
 KOMERCE_COST_API_KEY=komerce_cost_api
@@ -46,7 +46,7 @@ KOMERCE_DELIVERY_BASE_URL=komerce_delivery_base_url
 # KOMERCE_DELIVERY_BASE_URL=https://api.collaborator.komerce.id/
 
 # Komerce Origin settings, sesuaikan dengan lokasi toko
-KOMERCE_ORIGIN=423
+KOMERCE_ORIGIN=12345
 KOMERCE_ORIGIN_TYPE=district
 
 # Midtrans Payment Gateway Settings
@@ -55,6 +55,24 @@ MIDTRANS_CLIENT_KEY=midtrans_client_key
 MIDTRANS_ENV=sandbox # pilihan: sandbox / production
 
 # WhatsApp API Settings
-WHATSAPP_PHONE_NUMBER_ID=687953551079287 # ganti dengan nomor whatsapp business abby n bev
+WHATSAPP_PHONE_NUMBER_ID=whatsapp_business_number # ganti dengan nomor whatsapp business abby n bev
 WHATSAPP_ACCESS_TOKEN=access_token_whatsapp_business
-WHATSAPP_API_URL=https://graph.facebook.com/v17.0 # jangan diubah
+WHATSAPP_API_URL=link_graph
+
+# Biteship
+BITESHIP_BASE_URL=https://api.biteship.com
+BITESHIP_API_KEY=api_biteship
+BITESHIP_COURIERS=delivery_partner_lists
+COMPANY_NAME=company_name
+COMPANY_CONTACT_NAME=contact_name
+COMPANY_PHONE=company_phone_number
+COMPANY_EMAIL=company_email
+COMPANY_ADDRESS=company_address
+COMPANY_POSTAL_CODE=postal_code
+COMPANY_PINPOINT=company_location_coodinate
+
+# cloudinary API settings
+CLOUDINARY_CLOUD_NAME=cloud_name
+CLOUDINARY_API_KEY=api_key
+CLOUDINARY_API_SECRET=secret_api
+CLOUDINARY_URL=url_cloudinary
