--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@ tmp
 
 # Secrets
 .env
-.env.local
-.env.production.local
-.env.development.local
+.env.*
+!.env.example
 
 # Frontend assets compiled code
 public/assets
