--- a/package.json
+++ b/package.json
@@ -86,8 +86,6 @@
       "types": "./app/enums/*.ts",
       "default": "./app/enums/*.js"
     }
-
-    
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
@@ -124,6 +122,7 @@
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@types/lodash": "^4.17.20",
     "@vinejs/vine": "^3.0.1",
+    "adonis-autoswagger": "^3.73.0",
     "adonis-captcha-guard": "^1.0.1",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
@@ -139,7 +138,8 @@
     "mysql2": "^3.14.3",
     "openai": "^5.23.2",
     "reflect-metadata": "^0.2.2",
-    "rollup": "^4.54.0"
+    "rollup": "^4.54.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "hotHook": {
     "boundaries": [
