--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backendAPI-AbbynBev",
+  "name": "backendapi-abbynbev",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -150,7 +150,8 @@
     "reflect-metadata": "^0.2.2",
     "rollup": "^4.54.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "type-check": "^0.4.0"
   },
   "hotHook": {
     "boundaries": [
@@ -158,5 +159,21 @@
       "./app/middleware/*.ts"
     ]
   },
-  "prettier": "@adonisjs/prettier-config"
+  "prettier": "@adonisjs/prettier-config",
+  "description": "",
+  "main": "ace.js",
+  "directories": {
+    "doc": "docs",
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/webdevabbynbev/backend-abby.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/webdevabbynbev/backend-abby/issues"
+  },
+  "homepage": "https://github.com/webdevabbynbev/backend-abby#readme"
 }
