--- a/.env.example
+++ b/.env.example
@@ -120,3 +120,6 @@ CHATKIT_FORWARD_TIMEOUT_MS=30000
 # ==================================================
 
 DRIVE_DISK=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
