--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.6.1",
     "@adonisjs/mail": "^9.2.2",
+    "@adonisjs/redis": "^9.2.0",
     "@material/web": "^2.4.1",
     "@react-pdf/renderer": "^4.3.1",
     "@rollup/plugin-node-resolve": "^16.0.3",
