dockerfile update, .env.example update

--- a/.env.example
+++ b/.env.example
@@ -1,104 +1,142 @@
-# Timezone (default UTC, boleh diganti)
+# ==================================================
+# BASIC APP CONFIG
+# ==================================================
+
+NODE_ENV=development
+PORT=3333
+HOST=0.0.0.0
+
+APP_TITLE=Abby n Bev
+APP_KEY=base64:HV64AmB9i_bWd1XQ8QLMM88EaAsrEHs-
+APP_URL=http://localhost:3333
+APP_CLIENT=http://localhost:3000
+
+LOG_LEVEL=info
 TZ=UTC
 
-# App & Server Settings
-PORT=3333 # sesuaikan port nya
-HOST=localhost
-LOG_LEVEL=info
-APP_TITLE=Abby-n-Bev E-commerce
-APP_URL=http://localhost:3333
-APP_CLIENT=http://localhost:3333
-APP_KEY=
-NODE_ENV=development
+# ==================================================
+# AWS S3
+# ==================================================
 
-# Database Settings
-DB_CONNECTION=mysql # pilihan: mysql / pg
-DB_HOST=localhost
-DB_PORT=db_port # sesuaikan DB port nya
-DB_USER=db_user
-DB_PASSWORD= # kosongkan
-DB_DATABASE=abbynbev # ini untuk nama database sekarang
-DB_SSL=false # true jika butuh koneksi SSL
+AWS_REGION=ap-southeast-1
+AWS_S3_BUCKET=
+AWS_CLOUDFRONT_URL=
 
-# Mailer / SMTP Settings 
-SMTP_HOST=smtp_host
-SMTP_PORT=smtp_port
-SMTP_USERNAME=smtp_username
-SMTP_PASSWORD=smtp_password
-DEFAULT_FROM_EMAIL=email@example.com
+# ==================================================
+# WHATSAPP API SETTING
+# ==================================================
 
-# File Storage Settings
-DRIVE_DISK=fs # pilihan: fs / local
-
-# AWS S3 Settings (optional, kalo pakai cloud storage)
-AWS_ACCESS_KEY_ID=aws_access_key
-AWS_SECRET_ACCESS_KEY=aws_secret_key
-AWS_REGION=aws_region
-S3_BUCKET=bucket_name
-
-# Google OAuth Settings (optional, kalo pakai Google login)
-GOOGLE_CLIENT_ID=client_id
-GOOGLE_CLIENT_SECRET=secret_client
-
-# Komerce Raja Ongkir API Settings
-KOMERCE_COST_API_KEY=komerce_cost_api
-KOMERCE_COST_BASE_URL=komerce_cost_base_url
-KOMERCE_DELIVERY_API_KEY=komerce_delivery_api
-KOMERCE_DELIVERY_BASE_URL=komerce_delivery_base_url
-# KOMERCE_DELIVERY_BASE_URL=https://api.collaborator.komerce.id/
-
-# Komerce Origin settings, sesuaikan dengan lokasi toko
-KOMERCE_ORIGIN=12345
-KOMERCE_ORIGIN_TYPE=district
-
-# Midtrans Payment Gateway Settings
-MIDTRANS_SERVER_KEY=midtrans_server_key
-MIDTRANS_CLIENT_KEY=midtrans_client_key
-MIDTRANS_ENV=sandbox # pilihan: sandbox / production
-
-# WhatsApp API Settings
-WHATSAPP_PHONE_NUMBER_ID=whatsapp_business_number # ganti dengan nomor whatsapp business abby n bev
+WHATSAPP_PHONE_NUMBER_ID=
 WHATSAPP_ACCESS_TOKEN=access_token_whatsapp_business
-WHATSAPP_API_URL=link_graph
+WHATSAPP_API_URL=
 
-# Biteship
-BITESHIP_BASE_URL=https://api.biteship.com
-BITESHIP_API_KEY=api_biteship
-BITESHIP_COURIERS=delivery_partner_lists
-COMPANY_NAME=company_name
-COMPANY_CONTACT_NAME=contact_name
-COMPANY_PHONE=company_phone_number
-COMPANY_EMAIL=company_email
-COMPANY_ADDRESS=company_address
-COMPANY_POSTAL_CODE=postal_code
-COMPANY_PINPOINT=company_location_coodinate
+
+# ==================================================
+# DATABASE SETTING - SUPABASE (POSTGRES)
+# ==================================================
+
+DB_CONNECTION=pg
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=p
+DB_SSL=
+DB_POOL_MIN=0
+DB_POOL_MAX=3
+
+# ==================================================
+# GOOGLE OAUTH
+# ==================================================
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+
+
+# ==================================================
+# SUPABASE SETTING
+# ==================================================
+
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+
+
+# ==================================================
+# MAIL / SMTP
+# ==================================================
+
+MAIL_MAILER=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_SECURE=
+
+DEFAULT_FROM_EMAIL=
+DEFAULT_FROM_NAME=
+
+
+# ==================================================
+# CLOUDINARY
+# ==================================================
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+
+# ==================================================
+# PAYMENT GATEWAY - MIDTRANS
+# ==================================================
+
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
+MIDTRANS_ENV=sandbox
+
+
+# ==================================================
+# SHIPPING - BITESHIP
+# ==================================================
+
+BITESHIP_BASE_URL=m
+BITESHIP_API_KEY=
+BITESHIP_COURIERS=
 
 COMPANY_NAME=Abby n Bev
-COMPANY_CONTACT_NAME=Admin
-COMPANY_PHONE=08123456789
-COMPANY_EMAIL=admin@abbynbev.com
-COMPANY_ADDRESS=Jakarta
-COMPANY_POSTAL_CODE=12345
-COMPANY_PINPOINT=-6.2,106.8
+COMPANY_CONTACT_NAME=
+COMPANY_PHONE=
+COMPANY_EMAIL=
+COMPANY_ADDRESS=
+COMPANY_POSTAL_CODE=
+COMPANY_PINPOINT=
 
 
 # ==================================================
 # OPENAI / CHATKIT
 # ==================================================
 
-OPENAI_API_KEY=sk-xxxx
-OPENAI_ORG=org_xxxx
+OPENAI_API_KEY=
+OPENAI_ORG=
 
-CHATKIT_VECTOR_STORE_ID=vs_xxxx
-CHATKIT_WORKFLOW_ID=wf_xxxx
-CHATKIT_FORWARD_URL=https://your-worker-endpoint
-CHATKIT_FORWARD_TIMEOUT_MS=30000
+
+CHATKIT_VECTOR_STORE_ID=
+CHATKIT_WORKFLOW_ID=
+CHATKIT_FORWARD_URL=
+CHATKIT_FORWARD_TIMEOUT_MS=
 
 # ==================================================
 # STORAGE LOKAL ADONIS
 # ==================================================
 
-DRIVE_DISK=local
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
+DRIVE_DISK=fs
+
+
+# ==================================================
+# LIMITER
+# ==================================================
+
+LIMITER_STORE=
+REDIS_HOST=
+REDIS_PORT=
 REDIS_PASSWORD=
