--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 # BASIC APP CONFIG
 # ==================================================
 
-NODE_ENV=development
+NODE_ENV=production
 PORT=3333
 HOST=0.0.0.0
 
-APP_TITLE=Abby n Bev
-APP_KEY=base64:HV64AmB9i_bWd1XQ8QLMM88EaAsrEHs-
+APP_TITLE=xxxx
+APP_KEY=base64:HV64AmB9i_xxxx-
 APP_URL=http://localhost:3333
 APP_CLIENT=http://localhost:3000
 
@@ -19,16 +19,16 @@ TZ=UTC
 # ==================================================
 
 AWS_REGION=ap-southeast-1
-AWS_S3_BUCKET=
-AWS_CLOUDFRONT_URL=
+AWS_S3_BUCKET=xxxxx-xxxx-prod
+AWS_CLOUDFRONT_URL=xxxx.cloudfront.net
 
 # ==================================================
 # WHATSAPP API SETTING
 # ==================================================
 
-WHATSAPP_PHONE_NUMBER_ID=
+WHATSAPP_PHONE_NUMBER_ID=xxxxxx
 WHATSAPP_ACCESS_TOKEN=access_token_whatsapp_business
-WHATSAPP_API_URL=
+WHATSAPP_API_URL=https://graph.facebook.com/v17.0
 
 
 # ==================================================
@@ -36,12 +36,12 @@ WHATSAPP_API_URL=
 # ==================================================
 
 DB_CONNECTION=pg
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_DATABASE=p
-DB_SSL=
+DB_HOST=aws-1-ap-southeast-1.pooler.supabase.com
+DB_PORT=5432
+DB_USER=postgres.xxxxx
+DB_PASSWORD=xxxxx
+DB_DATABASE=postgres
+DB_SSL=true
 DB_POOL_MIN=0
 DB_POOL_MAX=3
 
@@ -49,49 +49,50 @@ DB_POOL_MAX=3
 # GOOGLE OAUTH
 # ==================================================
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+GOOGLE_CLIENT_ID=212963374176-xxxxx.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-xxxxqsm0
+GOOGLE_REDIRECT_URI=https://xxxxx.supabase.co/auth/v1/callback
 
 
 # ==================================================
 # SUPABASE SETTING
 # ==================================================
 
-SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_URL=https://xxxxx.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGcixxxx
+
 
 
 # ==================================================
 # MAIL / SMTP
 # ==================================================
 
-MAIL_MAILER=
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USERNAME=
-SMTP_PASSWORD=
-SMTP_SECURE=
+MAIL_MAILER=sandbox.smtp.mailtrap.io
+SMTP_HOST=xxxx
+SMTP_PORT=xxxx
+SMTP_USERNAME=xxxx
+SMTP_PASSWORD=xxxxx
+SMTP_SECURE=false
 
-DEFAULT_FROM_EMAIL=
-DEFAULT_FROM_NAME=
+DEFAULT_FROM_EMAIL=no-reply@xxxx
+DEFAULT_FROM_NAME="xxxxv"
 
 
 # ==================================================
 # CLOUDINARY
 # ==================================================
 
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=abbymedia
+CLOUDINARY_API_KEY=xxxx
+CLOUDINARY_API_SECRET=c-GQj8r-xxxx
 
 
 # ==================================================
 # PAYMENT GATEWAY - MIDTRANS
 # ==================================================
 
-MIDTRANS_SERVER_KEY=
-MIDTRANS_CLIENT_KEY=
+MIDTRANS_SERVER_KEY=SB-Mid-server-q7xxxx
+MIDTRANS_CLIENT_KEY=SB-Mid-client-a8xxxx
 MIDTRANS_ENV=sandbox
 
 
@@ -99,31 +100,30 @@ MIDTRANS_ENV=sandbox
 # SHIPPING - BITESHIP
 # ==================================================
 
-BITESHIP_BASE_URL=m
-BITESHIP_API_KEY=
-BITESHIP_COURIERS=
+BITESHIP_BASE_URL=https://api.biteship.com
+BITESHIP_API_KEY=biteship_test.eyJxxxx
+BITESHIP_COURIERS=jne,sicepat,jnt,anteraja,pos,tiki
 
-COMPANY_NAME=Abby n Bev
-COMPANY_CONTACT_NAME=
-COMPANY_PHONE=
-COMPANY_EMAIL=
-COMPANY_ADDRESS=
-COMPANY_POSTAL_CODE=
-COMPANY_PINPOINT=
+COMPANY_NAME=Abbxxxx
+COMPANY_CONTACT_NAME=Abxxxx
+COMPANY_PHONE=0812xxxx
+COMPANY_EMAIL=supportxxxxx
+COMPANY_ADDRESS=Jalan xxxx
+COMPANY_POSTAL_CODE=40xxxx
+COMPANY_PINPOINT="-6.xxxx
 
 
 # ==================================================
 # OPENAI / CHATKIT
 # ==================================================
 
-OPENAI_API_KEY=
-OPENAI_ORG=
+OPENAI_API_KEY=sk-proj-xxxxxx
 
 
-CHATKIT_VECTOR_STORE_ID=
-CHATKIT_WORKFLOW_ID=
-CHATKIT_FORWARD_URL=
-CHATKIT_FORWARD_TIMEOUT_MS=
+CHATKIT_VECTOR_STORE_ID=vs_xxxx
+CHATKIT_WORKFLOW_ID=wf_xxxxx
+CHATKIT_FORWARD_URL=http://127.0.0.1:3000/api/products/chatkit
+CHATKIT_FORWARD_TIMEOUT_MS=60000
 
 # ==================================================
 # STORAGE LOKAL ADONIS
@@ -136,7 +136,4 @@ DRIVE_DISK=fs
 # LIMITER
 # ==================================================
 
-LIMITER_STORE=
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
+LIMITER_STORE=database
