--- a/.env.example
+++ b/.env.example
@@ -115,6 +115,8 @@ CHATKIT_WORKFLOW_ID=wf_xxxxx
 CHATKIT_FORWARD_URL=http://127.0.0.1:3000/api/products/chatkit
 CHATKIT_FORWARD_TIMEOUT_MS=60000
 
+CATALOG_BASE_URL=xxxxxx
+
 # ==================================================
 # STORAGE LOKAL ADONIS
 # ==================================================
