--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,11 @@ TZ=UTC
 # AWS S3
 # ==================================================
 
+AWS_ACCESS_KEY_ID=xxxx
+AWS_SECRET_ACCESS_KEY=xxxx
 AWS_REGION=ap-southeast-1
 AWS_S3_BUCKET=xxxxx-xxxx-prod
+AWS_S3_PUBLIC_URL=
 AWS_CLOUDFRONT_URL=xxxx.cloudfront.net
 
 # ==================================================
